# WeMusic2

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/peter/wemusic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/peter/wemusic/: CutPcmActivity.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/peter/wemusic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
myplayer/: build.gradle
myplayer/src/androidTest/java/com/peter/myplayer/: ExampleInstrumentedTest.java
myplayer/src/main/: AndroidManifest.xml
myplayer/src/main/cpp/: AndroidLog.h  CMakeLists.txt  CallJava.cpp  CallJava.h  FFmpeg.cpp  FFmpeg.h  MyAudio.cpp  MyAudio.h  PlayStatus.cpp  PlayStatus.h  SafeQueue.cpp  SafeQueue.h  WlAudio.cpp  WlAudio.h  WlCallJava.cpp  WlCallJava.h  WlFFmpeg.cpp  WlFFmpeg.h  WlQueue.cpp  native-lib.cpp
myplayer/src/main/java/com/peter/myplayer/: Demo.java
myplayer/src/main/java/com/peter/myplayer/bean/: TimeInfoBean.java
myplayer/src/main/java/com/peter/myplayer/listener/: MyOnCompleteListener.java  MyOnErrorListener.java  MyOnLoadListener.java  MyOnPauseResumeListener.java  MyOnTimeInfoListener.java  OnCutPcmDataListener.java  OnPreparedListener.java  OnRecordAacTimeListener.java  OnTimeInfoListener.java  OnVolumeDBListener.java
myplayer/src/main/java/com/peter/myplayer/player/: WeAudioPlayer.java
myplayer/src/main/java/com/peter/myplayer/utils/: MuteEnum.java  MyLog.java  MyTimeUtil.java  TimeUtil.java
myplayer/src/test/java/com/peter/myplayer/: ExampleUnitTest.java
